<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ReportProblemFragment"
        android:orientation="vertical"
        android:background="@color/green_light">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/problem_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            app:hintTextColor="@color/green_dark"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_image_button"
            android:layout_width="280dp"
            android:layout_height="150dp"
            android:textColor="@color/black"
            app:backgroundTint="@color/gray_light"
            app:iconTint="@color/black"
            android:layout_gravity="center"
            android:text="Dodaj fotografiju"
            android:layout_marginTop="15dp"
            app:icon="@drawable/ic_icon_camera"
            app:iconGravity="textStart" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:layout_gravity="center">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:text="@string/problem_type"/>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/problem_type_first"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">
            <RadioButton
                android:id="@+id/problem_type_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_type_1"
                android:textColor="@color/black"
                android:buttonTint="@color/green"/>
            <RadioButton
                android:id="@+id/problem_type_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/problem_type_2"
                android:buttonTint="@color/green"/>
            <RadioButton
                android:id="@+id/problem_type_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/problem_type_3"
                android:buttonTint="@color/green"/>
        </RadioGroup>



        <Button
            android:id="@+id/report_problem_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_problem"
            android:layout_gravity="center"
            android:backgroundTint="@color/green_dark"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</ScrollView>
