<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/spacing_small"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/spacing_extra_small"
        app:cardCornerRadius="@dimen/spacing_small">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="175dp"
                tools:src="@drawable/gradient"
                android:id="@+id/home_img"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:id="@+id/fragment_home_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_img"
                android:layout_alignParentStart="true"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/spacing_small">

                <TextView
                    android:id="@+id/home_row_title"
                    style="@style/TextAppearance.SZSUR.CardDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/event_dummy_title" />

                <TextView
                    android:id="@+id/home_row_time"
                    style="@style/TextAppearance.SZSUR.CardDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/event_dummy_time" />

                <TextView
                    android:id="@+id/home_row_location"
                    style="@style/TextAppearance.SZSUR.CardDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/event_dummy_location" />

                <TextView
                    android:id="@+id/home_row_desc"
                    style="@style/TextAppearance.SZSUR.CardDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/event_dummy_time" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>