<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReportProblemFragment"
        android:orientation="vertical"
        android:background="@color/green_light">
    

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black">
    
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                />
    
        </com.google.android.material.textfield.TextInputLayout>
    
    
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            >
    
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/white"
                android:textColor="@color/black"
                />
    
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_image_button"
            android:text="Dodaj fotografiju"
            android:layout_width="280dp"
            android:layout_height="150dp"
            android:textColor="@color/black"
            app:backgroundTint="@color/gray_light"
            app:iconTint="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:icon="@drawable/ic_icon_camera"
            app:iconGravity="textStart" />
    
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">
        </ImageView>

        <Button
            android:id="@+id/organize_cleansing_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organize_cleansing"
            android:layout_gravity="center"
            android:backgroundTint="@color/green_dark"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</ScrollView>